--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
 </div>
 </div>
 </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/lukakavtarra">lukakavtarra</a>.
+        </div>
+    </footer>
 </div>
 </body>
 </html>
